--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ minimal_mistakes_skin    : "aqua" #"air" #"neon" #"default" "air", "contrast", "
 locale                   : "en-US" 
 title                    : "ستایش سامانی"
 title_separator          : "-"
-name                     : "Poorang" 
+name                     : "SETAYESH" 
 description              : "Welcome to my web site."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : #the subpath of your site, e.g. "/blog"
