--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Setayesh Samani"
-  avatar           : "/assets/images/bio-photo.jpg"
+  avatar           : "https://www.kanoon.ir/FileRepository/Article/Images/523/14040229P8421t2892.jpg"
   bio              : ""
   location         : "تهران"
   email            : s_samani@comp.iust.ac.ir
